--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ edge-nal-embassy = {git = "https://github.com/ivmarkov/edge-net.git", branch = "
 edge-nal = {git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05"}
 embedded-websocket = { version = "0.9.4", default-features = false }
 httparse = {version = "1.9.5", default-features = false }
+zerocopy = {version = "0.8.13", features = ["derive"]}
 
 [profile.dev.package.esp-wifi]
 opt-level = 3
