Properly set up workspace.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,9 @@
             ],
             "label": "rust: cargo run",
             "args": [
-                "--release"
+                "--release",
+                "--bin",
+                "main"
             ]
         }
     ]
