--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "editor.formatOnSaveMode": "file",
     "rust-analyzer.check.allTargets": false,
+    "rust-analyzer.check.workspace": false,
     "rust-analyzer.check.targets": "xtensa-esp32s3-none-elf",
     "rust-analyzer.runnables.extraArgs": [
         "--release"
