--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ edge-nal = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy
 embedded-websocket = { version = "0.9.4", default-features = false }
 httparse = { version = "1.9.5", default-features = false }
 zerocopy = { version = "0.8.13", features = ["derive"] }
+libm = "0.2.11"
 
 [build-dependencies]
 toml = "0.8.19"
