--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,9 @@ embassy-net = { version = "0.5.0", features = [
     "medium-ethernet",
     "dhcpv4",
 ] }
-edge-http = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05" }
-edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05" }
-edge-nal = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05" }
+edge-http = "0.4.1"
+edge-nal-embassy = "0.4.1"
+edge-nal = "0.4.2"
 embedded-websocket = { version = "0.9.4", default-features = false }
 httparse = { version = "1.9.5", default-features = false }
 zerocopy = { version = "0.8.13", features = ["derive"] }
